Force redraw on mobile nav shown for Android. Fixes SGFE-84.
Removed fixed positioning for the page when mobile nav is open. This allows the transition to happen in FF and Chrome.

--- a/src/css/scss/_responsive/_responsive-navbar.scss
+++ b/src/css/scss/_responsive/_responsive-navbar.scss
@@ -552,7 +552,7 @@
 }
 .page-wrap-inner.show-mobile-menu{
   left:$navMobileWidthLarge;
-  position:fixed; // so the "main" content area doesn't scroll; just the nav
+  // position:fixed; // so the "main" content area doesn't scroll; just the nav
 }
 
 .mobile-screen-overlay{
